--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang+/en/ dir=ltr>
+<link rel="stylesheet" href="style.css">
 <head>
   <meta charset="utf-8">
   <title>Jam Scramble</title>
 </head>
 <body>
   <h1> Henwo? </h1>
+  <ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
 </body>
 </html>
-<link rel="stylesheet" href="style.css">
-<img src="assets/dog.jpg">
