--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Jam Scramble</title>
 </head>
 <body>
-  <h1> Henwo? </h1>
+  <h1> Jam Graham </h1>
   <ul>
   <li><a href="default.asp">Home</a></li>
   <li><a href="news.asp">News</a></li>
